# pyspedas_repo

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: themis_plot1.py
notes/: meeting notes
scripts/: plot_multi_probe.py  plot_single_probe.py  run_beam_pipeline.py  sanity_check.py
src/: test_plot.py  themisMultiProbe_2_27_2009
src/esa_plotting/: __init__.py  beam_pipeline.py  config.py  loaders.py  plotting.py  probes.py
